# mcnp_project

./: .gitignore  .gitmodules  235_data.txt  238_data.txt  MCNP.ipynb  Pipfile  Untitled.ipynb  lexer.py  mctal  mctal.py  output.tex  part_1.md  part_3.md  part_3.tex  pyproject.toml  report.aux  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.tex
.ipynb_checkpoints/: MCNP-checkpoint.ipynb  Pipfile-checkpoint  README-checkpoint.md  bibliography-checkpoint.bib  lexer-checkpoint.py  mctal-checkpoint.py  proxy-checkpoint.py  report-checkpoint.out  report-checkpoint.tex
_minted-report/: 17CE242A0B9719A7BA5E71819E348D7904DDAEA9A02F8C7CDAB948C071E54D0A.pygtex  21323A772B4A431850DD2086303FA849B982531BF50A3B299F2BB1254B9B96AC.pygtex  66FB3B26DA26BBD71BF87557AEC60F2F04DDAEA9A02F8C7CDAB948C071E54D0A.pygtex  83915CB77CFAC2BF864AA577F99EF8AD04DDAEA9A02F8C7CDAB948C071E54D0A.pygtex  87114635DF6BE3E6B2C1A56D824FF9E0B982531BF50A3B299F2BB1254B9B96AC.pygtex
