[tool.poetry]
name = "mcnp_project"
version = "0.1.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
colorama = "^0.3.9"
PILLOW = "^5.1"
selenium = "^3.11"
jupyter = "^1.0"
ipython = "^6.3"
jinja2 = "^2.10"
tornado = "4"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
